--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>week first example</title>
 </head>
 <body>
-    <h1>this is my first week assignment as a example.</h1>
+    <h1>This is my first week assignment of celebal technologies as a Node.js Backend Developer.</h1>
     <p> Hare Krishna! to everyone.</p>
 </body>
 </html>
