add css part also

--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>week first example</title>
+    <title>week first assignment</title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+        .box {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: lightblue;
+            background-color: black;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>This is my first week assignment of celebal technologies as a Node.js Backend Developer.</h1>
-    <p> Hare Krishna! to everyone.</p>
+    <div class="box">
+        <h1>This is my first week assignment of celebal technologies as a Node.js Backend Developer.</h1>
+    
+        <p>Hare Krishna! to everyone.</p>
+    </div>
 </body>
 </html>
